--- a/package.json
+++ b/package.json
@@ -4,17 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "test": "jest"
+    "test": "jest",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^4.18.2"
   },
   "devDependencies": {
-    "jest": "^30.1.3",
-    "supertest": "^7.1.4"
+    "jest": "^29.7.0",
+    "supertest": "^6.3.4"
   }
 }
